--- a/Frontend/netlify.toml
+++ b/Frontend/netlify.toml
@@ -1,4 +1,5 @@
 [[redirects]]
-  from = "/*"
-  to = "/index.html"
+  from = "/api/*"
+  to = "https://your-backend-domain.com/:splat"
   status = 200
+  force = true
